--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Sign Up - Plant Care AI Assistant{% endblock %}
+{% block title %}Sign Up - Plant Care AI Assistant - PlantCareAI{% endblock %}
 {% block description %}Create your free account to track plants, set reminders, and get personalized care tips.{% endblock %}
 
 {% block content %}
