--- a/app/templates/plants/add.html
+++ b/app/templates/plants/add.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Add Plant - Plant Care AI{% endblock %}
+{% block title %}Add Plant - Plant Care AI Assistant - PlantCareAI{% endblock %}
 {% block description %}Add a new plant to your collection.{% endblock %}
 
 {% block content %}
