--- a/app/templates/plants/edit.html
+++ b/app/templates/plants/edit.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Edit {{ plant.name }} - Plant Care AI{% endblock %}
+{% block title %}Edit {{ plant.name }} - Plant Care AI Assistant - PlantCareAI{% endblock %}
 {% block description %}Edit {{ plant.name }} details.{% endblock %}
 
 {% block content %}
