--- a/app/templates/plants/index.html
+++ b/app/templates/plants/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}My Plants - Plant Care AI{% endblock %}
+{% block title %}My Plants - Plant Care AI Assistant - PlantCareAI{% endblock %}
 {% block description %}View and manage your plant collection.{% endblock %}
 
 {% block content %}
