--- a/app/templates/plants/view.html
+++ b/app/templates/plants/view.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ plant.name }} - Plant Care AI{% endblock %}
+{% block title %}{{ plant.name }} - Plant Care AI Assistant - PlantCareAI{% endblock %}
 {% block description %}View details for {{ plant.name }}.{% endblock %}
 
 {% block content %}
