Security and accessibility fixes

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -100,9 +100,9 @@
         </a>
         <div class="brand-text-wrapper">
           <a class="brand-text" href="{{ url_for('web.index') }}" aria-label="PlantCareAI Home Banner">
-            <h1 class="site-title">
+            <div class="site-title">
               PlantCareAI <span aria-hidden="true" class="title-decoration">🪴 🌱 🌵</span>
-            </h1>
+            </div>
             <p class="site-tagline">{% block subtitle %}Your plants deserve to thrive. We'll show you how.{% endblock %}</p>
           </a>
         </div>
